[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "node-voicevox-engine"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
voicevox_core ={ git = "https://github.com/VOICEVOX/voicevox_core", rev = "0.15.0-preview.10" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
